# llmstxtgen

./: .gitignore  README.md  install.ps1  llms_function.py  pyproject.toml
docs/: QUICK_GUIDE.md  STARTER_GUIDE.md
llmstxtgen/: __init__.py  cli.py  core.py  fetcher.py  locales.py  meta.py  scraper.py  writer.py
